Fix the phantom jumping pan button.
For some people in Chrome the down pan button would be un-clickable.

--- a/css/main.css
+++ b/css/main.css
@@ -193,11 +193,6 @@ main {
   background-color: #c29fd1;
 }
 
-.flat_button:active {
-  position: relative;
-  top: 1px;
-}
-
 .twitter {
   background-color: #00aced;
 }
